--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,16 +53,16 @@ jobs:
           return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
         }
 
-        release-Trimming{
+        function releaseTrimming {
           param (
-              [string]$text
+            [string]$text
           )
           return $( $text -replace '^\[Release\]\s*', '' )
         }
 
         $isRelease = "${{ github.event.head_commit.message }}" -match '^\[Release\]\s*'
 
-        $headCommit = $( release-Trimming "${{ github.event.head_commit.message }}" )
+        $headCommit = $( releaseTrimming "${{ github.event.head_commit.message }}" )
 
         $commits = '${{ toJson(github.event.commits) }}' | ConvertFrom-Json
 
@@ -85,7 +85,7 @@ jobs:
 
         $(if($commits.Length -gt 1) { 
         [string]::Join(" 
-        ", $( $commits | Select -Skip 1 | ForEach-Object { "[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $_.message)
+        ", $( $commits | Select -Skip 1 | ForEach-Object { "[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $( releaseTrimming $_.message ) )
           by [$(escape $_.author.username)]( $(escape https://github.com/$($_.author.username)) )" }))
         })
         "@.Trim()
@@ -110,7 +110,7 @@ jobs:
          |-----------|----------------------|----------------|
         " +
         [string]::Join("
-        ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($_.url)) | $( release-Trimming $_.message ) | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
+        ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($_.url)) | $( releaseTrimming $_.message ) | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
         else { "" }).Trim()
 
             gh release create "v${{ env.VERSION }}" --latest --title "$headCommit" --notes "$message"
