--- a/SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj
+++ b/SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<LangVersion>preview</LangVersion>	
+		<LangVersion>13</LangVersion>	
 		<!--<PackageVersion>
 			$([System.Convert]::ToUInt16(
 				$([MSBuild]::Add(
