--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,27 +62,29 @@ jobs:
           param (
               [string]$text
           )
-          return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
+          return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!"'])', '\$1'
         }
 
         function releaseTrimming {
           param (
             [string]$text
           )
-          return $( $text -replace '^\[Release\]\s*', '' )
+          return $( $text -replace '^\[Release\]\s*', '' -replace '"' '\"' )
         }
 
         $isRelease = "${{ github.event.head_commit.message }}" -match '^\[Release\]\s*'
 
         $headCommit = $( releaseTrimming "${{ github.event.head_commit.message }}" )
 
-        $commits = '${{ toJson(github.event.commits) }}' | ConvertFrom-Json
+        $commits = "${{ toJson(github.event.commits) }}".Replace('"', '\"') | ConvertFrom-Json
+        
         $failed = '${{ job.status }}' -eq 'failure'
+        
         $status, $icon, $message = if ($failed) { 
           'failed', '💥', "Errors: 
           Build errors: ${{ steps.build.outputs.errors }}
           Pack errors: ${{ steps.pack.outputs.errors }}
-          Publish errors: ${{ steps.publish.outputs.errors }}".Trim()
+          Publish errors: ${{ steps.publish.outputs.errors }}".Replace("'", "\'").Trim()
         } elseif ('${{ job.status }}' -eq 'success') { 
           'successfully completed', '✅', $headCommit 
         } else { 
@@ -90,7 +92,7 @@ jobs:
         }
         
         $message = @"
-        🚀 *$(escape '${{ github.workflow }}')* \#1 Build $status ✅
+        🚀 *$(escape '${{ github.workflow }}')* \#1 Build $status $icon
         👤 *Triggered by:* $(escape 'pedro-gilmora')
         🌿 *Branch:* ${{ github.ref_name }}
         🔗 *Change:* *[ $( "${{ github.event.head_commit.id }}".Substring(0,8) ) ]( $(escape "https://github.com/${{ github.event.head_commit.author.username }}") )*
