Fix telegram escape message

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,7 +62,7 @@ jobs:
           param (
               [string]$text
           )
-          return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!"'])', '\$1'
+          return $text -replace "([_\*\[\]\(\)~``>#\+\-=|{}\.!`"'])", '\$1'
         }
 
         function releaseTrimming {
