--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -89,6 +89,8 @@ jobs:
             $errors = $( Get-Content -Path ./errors.log )
           }
           
+          echo $errors
+          
           function escape {
             param (
                 [string]$text
@@ -122,7 +124,7 @@ jobs:
           🚀 *$(escape '${{ github.workflow }}')* \#1 Build $status $icon
           👤 *Triggered by:* $( escape "${{ github.triggering_actor }}" )
           🌿 *Branch:* $( escape "${{ github.ref_name }}" )
-          🔗 *Change:* *[ $( $githubEvent.head_commit.id.Substring(0,8) ) ]( $(escape "https://github.com/$( $githubEvent.head_commit.author.username )") )*
+          🔗 *Change:* *[$( $githubEvent.head_commit.id.Substring(0,8) )]($( escape $githubEvent.head_commit.url )) )*
   
           *$(escape $headCommit)*
   
