[Release] Should work

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -108,7 +108,7 @@ jobs:
             $errors = $( Get-Content -Path ./errors.log )
           }
 
-          echo "These are the errors: $errors"
+          #echo "These are the errors: $errors"
 
           function escape {
             param (
@@ -144,18 +144,31 @@ jobs:
           👤 *Triggered by:* [$( escape "${{ github.triggering_actor }}" )](https://github.com/$( escape "${{ github.triggering_actor }}" ))
           🌿 *Branch:* $( escape "${{ github.ref_name }}" )
           🔗 *Change:* *[$( $githubEvent.head_commit.id.Substring(0,8) )]($( escape $githubEvent.head_commit.url ))*
-
-          *$(escape $headCommit)*
-
-          $(if($commits.Length -gt 1) {
-            [string]::Join("
-            ", $( $commits | Select -Skip 1 | ForEach-Object { "[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $( releaseTrimming $_.message ) )
-            by [$(escape $_.author.username)]( $(escape https://github.com/$($_.author.username)) )" }))
-          })
-
-          $( if($errors) { "$( escape "```$errors```" )".Trim() } )
-          "@.Trim()
-
+          
+          *$(releaseTrimming | escape $githubEvent.head_commit.message)*$(if($commits.Count -gt 1) { "
+          
+          $([string]::Join("
+          ", $( $commits | 
+                Select -Skip 1 | 
+                ForEach-Object { 
+                    "![🔹](tg://emoji?id=5346181118884331907)[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $_.message )
+            by [$(escape $_.author.username)]($( escape https://github.com/$($_.author.username) ))"
+          })))"
+          })$( if($errors) { "
+            
+          ``````$( escape $errors.Trim() )``````" } )
+          "@
+          
+          gh release create v${{ env.VERSION }} -t "$(releaseTrimming $githubEvent.head_commit.message)" -n $(if($commits.Count -gt 1) { "| ID | Message | Author |
+          |---|---|---|
+          $([string]::Join("
+          ", $( $commits | 
+            Select -Skip 1 | 
+            ForEach-Object { 
+              "| [$($_.id.Substring(0,8))]($($_.url)) | $( releaseTrimming $_.message ) | [$( $_.author.username )]( https://github.com/$($_.author.username) ) |"
+          })))"
+          } else { "" }) 
+  
           Write-Host $message
 
           $uri = "https://api.telegram.org/bot${{ secrets.TGBOT_TOKEN }}/sendMessage"
