[Release] Oeee, funciona asere

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -144,19 +144,19 @@ jobs:
           👤 *Triggered by:* [$( escape "${{ github.triggering_actor }}" )](https://github.com/$( escape "${{ github.triggering_actor }}" ))
           🌿 *Branch:* $( escape "${{ github.ref_name }}" )
           🔗 *Change:* *[$( $githubEvent.head_commit.id.Substring(0,8) )]($( escape $githubEvent.head_commit.url ))*
-          
-          *$( escape | releaseTrimming $githubEvent.head_commit.message )*$(if($commits.Count -gt 1) { "
+  
+          *$(releaseTrimming | escape $githubEvent.head_commit.message)*$(if($commits.Count -gt 1) { "
           
           $([string]::Join("
           ", $( $commits | 
-                Select -Skip 1 | 
-                ForEach-Object { 
-                    "![🔹](tg://emoji?id=5346181118884331907)[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $_.message )
+            Select -Skip 1 | 
+            ForEach-Object { 
+              "🔹[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $_.message )
             by [$(escape $_.author.username)]($( escape https://github.com/$($_.author.username) ))"
           })))"
           })$( if($errors) { "
             
-          ``````$( escape $errors.Trim() )``````" } )
+            ``````$( escape $errors.Trim() )``````" } )
           "@
           
           if( -not $failed -and $isRelease ) 
