--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,9 +34,18 @@ jobs:
         run: |
           # Run the test command and capture both output and exit code
           output=$(dotnet build SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj --verbosity normal -c Release 2>&1)
+          
+          # Check if the exit code is non-zero (indicating an error)
+          if [ "${#output}" -ne 0 ]; then
+            # Print and save the output to a log file
+            echo "$output"
+            cat <<EOF > errors.log 
+          Test Error:
+             $output
+          EOF
+          fi
+          
           output=$(dotnet test --no-build SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj --verbosity normal -c Release 2>&1)
-        
-          echo $output 
           
           # Check if the exit code is non-zero (indicating an error)
           if [ "${#output}" -ne 0 ]; then
