--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -143,7 +143,7 @@ jobs:
           ``````" } )
           "@
           echo "failed: $failed, isRelease: $isRelease"
-          if( ( $isRelease -and -not $failed ) 
+          if( $isRelease -and -not $failed ) 
           {
             gh release create v${{ env.VERSION }} -t "$(releaseTrimming $githubEvent.head_commit.message)" -n $(if($commits.Count -gt 1) { "| ID | Message | Author |
             |---|---|---|
